# application-resource-collector

./: Cargo.toml  README.md
src/: collect.rs  main.rs  sample.rs
support-apps/: collect
support-apps/slow-looping/: Cargo.toml
support-apps/slow-looping/src/: main.rs
