[package]
name = "arc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.4"
clap = { version = "4.2.2", features = ["derive"]}
chrono = "0.4.24"
human_bytes = "0.4.1"
regex = "1.7.3"
tabled = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
